metadata/root/main/default/objects/X12_11regression__c/X12_11regression__c.object-meta.xml
<CustomObject>
    <label>12.11regression</label>
    <nameField>
        <label>12.11regression Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>12.11regression</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>