metadata/root/main/default/objects/X12_11regression__c/fields/autonumberC__c.field-meta.xml
<CustomField>
    <fullName>autonumberC__c</fullName>
    <description>modify</description>
    <label>autonumberC</label>
    <type>AutoNumber</type>
</CustomField>