metadata/root/main/default/objects/X12_11regression__c/fields/checkboxc__c.field-meta.xml
<CustomField>
    <fullName>checkboxc__c</fullName>
    <defaultValue>false</defaultValue>
    <description>modify</description>
    <label>checkboxc</label>
    <type>Checkbox</type>
</CustomField>