metadata/root/main/default/objects/X12_11regression__c/fields/emailc__c.field-meta.xml
<CustomField>
    <fullName>emailc__c</fullName>
    <description>modify</description>
    <label>emailc</label>
    <type>Email</type>
</CustomField>