metadata/root/main/default/objects/X12_11regression__c/fields/geolocationc__c.field-meta.xml
<CustomField>
    <fullName>geolocationc__c</fullName>
    <description>modify</description>
    <label>geolocationc</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>