metadata/root/main/default/objects/X12_11regression__c/fields/multipicklist__c.field-meta.xml
<CustomField>
    <fullName>multipicklist__c</fullName>
    <description>modify</description>
    <label>multipicklist</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SBQQ__PriceModel</valueSetName>
    </valueSet>
</CustomField>