metadata/root/main/default/objects/X12_11regression__c/fields/numberc__c.field-meta.xml
<CustomField>
    <fullName>numberc__c</fullName>
    <description>modify</description>
    <label>numberc</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>