metadata/root/main/default/objects/X12_11regression__c/fields/textarea__c.field-meta.xml
<CustomField>
    <fullName>textarea__c</fullName>
    <description>modify</description>
    <label>textarea</label>
    <type>TextArea</type>
</CustomField>