metadata/root/main/default/objects/X12_11regression__c/fields/Textarealong__c.field-meta.xml
<CustomField>
    <fullName>Textarealong__c</fullName>
    <description>modify</description>
    <label>Textarealong</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>