metadata/root/main/default/objects/X12_11regression__c/fields/textc__c.field-meta.xml
<CustomField>
    <fullName>textc__c</fullName>
    <description>modify</description>
    <label>textc</label>
    <length>40</length>
    <type>Text</type>
</CustomField>