metadata/root/main/default/objects/X12_11regression__c/fields/textencrypted__c.field-meta.xml
<CustomField>
    <fullName>textencrypted__c</fullName>
    <description>modify</description>
    <label>textencrypted</label>
    <length>50</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>