metadata/root/main/default/objects/X12_11regression__c/fields/X12_11picklist__c.field-meta.xml
<CustomField>
    <fullName>X12_11picklist__c</fullName>
    <label>12.11picklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SBQQ__JobStatus</valueSetName>
    </valueSet>
</CustomField>