metadata/root/main/default/objects/X12_11regression__c/recordTypes/X12_11_record_type_123.recordType-meta.xml
<RecordType>
    <fullName>X12_11_record_type_123</fullName>
    <active>true</active>
    <label>12.11 record type 123</label>
</RecordType>