metadata/root/main/default/objects/X12_11regression__c/recordTypes/X12_11recordtype.recordType-meta.xml
<RecordType>
    <fullName>X12_11recordtype</fullName>
    <active>true</active>
    <label>12.11recordtype</label>
</RecordType>