metadata/root/main/default/objects/X12_11regression__c/validationRules/validationRule.validationRule-meta.xml
<ValidationRule>
    <fullName>validationRule</fullName>
    <active>true</active>
    <errorConditionFormula>Name != &apos;0&apos;</errorConditionFormula>
    <errorMessage>error</errorMessage>
</ValidationRule>